[package]
name = "web3ui"
license = "MIT"
edition.workspace = true
version.workspace = true
description = "web3ui helps us build great-looking apps across all platforms with the power of rust :)"
documentation = "https://docs.rs/web3ui"

[dependencies]

[workspace]
members = ["./", "compose"]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
# serde support
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }


# error
thiserror = "^1"
anyhow = "^1"
log = "^0.4"
futures = "^0.3"
