[package]
description = "web3ui helps us build great-looking apps across all platforms with the power of rust :)"
documentation = "https://docs.rs/web3ui"
edition.workspace = true
license = "MIT"
name = "web3ui"
version.workspace = true

[dependencies]

[workspace]
members = ["./", "ecs", "ecs/derive", "compose"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# serde support
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

# error
anyhow = "^1"
thiserror = "^1"

# others
once_cell = "^1.17"
sha3 = "^0.10"
uuid = "^1.3"

# logs
log = "^0.4"
pretty_env_logger = "^0.4"

# async 
futures = "^0.3"

libecs = {path = "./ecs", version = "^0.1"}
libecs-derive = {path = "./ecs/derive", version = "^0.1"}
