[package]
description = "agoraui helps us build great-looking apps across all platforms with the power of rust :)"
documentation = "https://docs.rs/agoraui"
edition.workspace = true
license = "MIT"
name = "agoraui"
version.workspace = true

[dependencies]
agoraui-compose = {workspace = true}

[workspace]
members = ["./", "compose"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# serde support
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

# error
anyhow = "^1"
thiserror = "^1"

# others
once_cell = "^1.17"
sha3 = "^0.10"
uuid = "^1.3"

# logs
dotenv = "^0.15"
log = "^0.4"
pretty_env_logger = "^0.4"

# async 
async-std = {version = "1.11.0", features = ["attributes", "default", "unstable"]}
futures = "^0.3"

#rust code generation
proc-macro2 = "^1"
quote = "^1"

impl-trait-for-tuples = "0.2.2"

futures-signals = "0.3.32"

agoraui-compose = {path = "./compose"}
