[package]
description = "Agora ui reactive framework for rust"
documentation = "https://docs.rs/agoraui-compose"
edition.workspace = true
license = "MIT"
name = "agoraui-compose"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agoraui-compose-macros = {path = "./macros"}
futures = {workspace = true}
impl-trait-for-tuples = {workspace = true}
log = {workspace = true}

[dev-dependencies]
async-std = {workspace = true}
pretty_env_logger = {workspace = true}
