[package]
description = "ecs library for rust"
documentation = "https://docs.rs/libecs"
edition.workspace = true
license = "MIT"
name = "libecs"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {workspace = true}
serde = {workspace = true}
sha3 = {workspace = true}
uuid = {workspace = true, features = ["v4", "v7", "js", "serde"]}

libecs-derive = {workspace = true, optional = true}

[dev-dependencies]
log = {workspace = true}
pretty_env_logger = {workspace = true}
serde_json = {workspace = true}

[features]
default = ["derive"]
derive = ["libecs-derive"]
