[package]
description = "ecs library for rust"
documentation = "https://docs.rs/libecs-derive"
edition.workspace = true
license = "MIT"
name = "libecs-derive"
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
proc-macro2 = "^1"
quote = "^1"
syn = {version = "^2", features = ["full"]}

[dev-dependencies]
anyhow = {workspace = true}
serde = {workspace = true}
